Code cleanup + correct formatting